// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parser associative array literals allows a mix of quoted and unquoted keys 1`] = `
Array [
  Assignment {
    "name": Object {
      "isReserved": false,
      "kind": 28,
      "literal": undefined,
      "location": Object {
        "end": Object {
          "column": -9,
          "line": -9,
        },
        "start": Object {
          "column": -9,
          "line": -9,
        },
      },
      "text": "_",
    },
    "tokens": Object {
      "equals": Object {
        "isReserved": false,
        "kind": 26,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "=",
      },
    },
    "value": AALiteral {
      "close": Object {
        "isReserved": false,
        "kind": 5,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "}",
      },
      "elements": Array [
        Object {
          "name": BrsString {
            "kind": 2,
            "value": "foo",
          },
          "value": Literal {
            "_location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
            "value": Int32 {
              "kind": 3,
              "value": 1,
            },
          },
        },
        Object {
          "name": BrsString {
            "kind": 2,
            "value": "bar",
          },
          "value": Literal {
            "_location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
            "value": Int32 {
              "kind": 3,
              "value": 2,
            },
          },
        },
        Object {
          "name": BrsString {
            "kind": 2,
            "value": "requires-hypens",
          },
          "value": Literal {
            "_location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
            "value": Int32 {
              "kind": 3,
              "value": 3,
            },
          },
        },
      ],
      "open": Object {
        "isReserved": false,
        "kind": 4,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "{",
      },
    },
  },
]
`;

exports[`parser associative array literals allows separating properties with colons 1`] = `
Array [
  Function {
    "func": Function {
      "body": Block {
        "startingLocation": Object {
          "end": Object {
            "column": 22,
            "line": 3,
          },
          "file": "",
          "start": Object {
            "column": 16,
            "line": 3,
          },
        },
        "statements": Array [
          Assignment {
            "name": Object {
              "isReserved": false,
              "kind": 28,
              "literal": undefined,
              "location": Object {
                "end": Object {
                  "column": 22,
                  "line": 3,
                },
                "file": "",
                "start": Object {
                  "column": 16,
                  "line": 3,
                },
              },
              "text": "person",
            },
            "tokens": Object {
              "equals": Object {
                "isReserved": false,
                "kind": 26,
                "literal": undefined,
                "location": Object {
                  "end": Object {
                    "column": 24,
                    "line": 3,
                  },
                  "file": "",
                  "start": Object {
                    "column": 23,
                    "line": 3,
                  },
                },
                "text": "=",
              },
            },
            "value": AALiteral {
              "close": Object {
                "isReserved": false,
                "kind": 5,
                "literal": undefined,
                "location": Object {
                  "end": Object {
                    "column": 49,
                    "line": 3,
                  },
                  "file": "",
                  "start": Object {
                    "column": 48,
                    "line": 3,
                  },
                },
                "text": "}",
              },
              "elements": Array [
                Object {
                  "name": BrsString {
                    "kind": 2,
                    "value": "name",
                  },
                  "value": Literal {
                    "_location": Object {
                      "end": Object {
                        "column": 37,
                        "line": 3,
                      },
                      "file": "",
                      "start": Object {
                        "column": 32,
                        "line": 3,
                      },
                    },
                    "value": BrsString {
                      "kind": 2,
                      "value": "Bob",
                    },
                  },
                },
                Object {
                  "name": BrsString {
                    "kind": 2,
                    "value": "age",
                  },
                  "value": Literal {
                    "_location": Object {
                      "end": Object {
                        "column": 48,
                        "line": 3,
                      },
                      "file": "",
                      "start": Object {
                        "column": 46,
                        "line": 3,
                      },
                    },
                    "value": Int32 {
                      "kind": 3,
                      "value": 50,
                    },
                  },
                },
              ],
              "open": Object {
                "isReserved": false,
                "kind": 4,
                "literal": undefined,
                "location": Object {
                  "end": Object {
                    "column": 26,
                    "line": 3,
                  },
                  "file": "",
                  "start": Object {
                    "column": 25,
                    "line": 3,
                  },
                },
                "text": "{",
              },
            },
          },
        ],
      },
      "end": Object {
        "isReserved": false,
        "kind": 55,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": 19,
            "line": 4,
          },
          "file": "",
          "start": Object {
            "column": 12,
            "line": 4,
          },
        },
        "text": "end sub",
      },
      "keyword": Object {
        "isReserved": true,
        "kind": 82,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": 15,
            "line": 2,
          },
          "file": "",
          "start": Object {
            "column": 12,
            "line": 2,
          },
        },
        "text": "sub",
      },
      "parameters": Array [],
      "returns": 10,
    },
    "name": Object {
      "isReserved": false,
      "kind": 28,
      "literal": undefined,
      "location": Object {
        "end": Object {
          "column": 20,
          "line": 2,
        },
        "file": "",
        "start": Object {
          "column": 16,
          "line": 2,
        },
      },
      "text": "Main",
    },
  },
]
`;

exports[`parser associative array literals empty associative arrays on multiple lines 1`] = `
Array [
  Assignment {
    "name": Object {
      "isReserved": false,
      "kind": 28,
      "literal": undefined,
      "location": Object {
        "end": Object {
          "column": -9,
          "line": -9,
        },
        "start": Object {
          "column": -9,
          "line": -9,
        },
      },
      "text": "_",
    },
    "tokens": Object {
      "equals": Object {
        "isReserved": false,
        "kind": 26,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "=",
      },
    },
    "value": AALiteral {
      "close": Object {
        "isReserved": false,
        "kind": 5,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "}",
      },
      "elements": Array [],
      "open": Object {
        "isReserved": false,
        "kind": 4,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "{",
      },
    },
  },
]
`;

exports[`parser associative array literals empty associative arrays on one line 1`] = `
Array [
  Assignment {
    "name": Object {
      "isReserved": false,
      "kind": 28,
      "literal": undefined,
      "location": Object {
        "end": Object {
          "column": -9,
          "line": -9,
        },
        "start": Object {
          "column": -9,
          "line": -9,
        },
      },
      "text": "_",
    },
    "tokens": Object {
      "equals": Object {
        "isReserved": false,
        "kind": 26,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "=",
      },
    },
    "value": AALiteral {
      "close": Object {
        "isReserved": false,
        "kind": 5,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "}",
      },
      "elements": Array [],
      "open": Object {
        "isReserved": false,
        "kind": 4,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "{",
      },
    },
  },
]
`;

exports[`parser associative array literals filled arrays on multiple lines with commas 1`] = `
Array [
  Assignment {
    "name": Object {
      "isReserved": false,
      "kind": 28,
      "literal": undefined,
      "location": Object {
        "end": Object {
          "column": -9,
          "line": -9,
        },
        "start": Object {
          "column": -9,
          "line": -9,
        },
      },
      "text": "_",
    },
    "tokens": Object {
      "equals": Object {
        "isReserved": false,
        "kind": 26,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "=",
      },
    },
    "value": AALiteral {
      "close": Object {
        "isReserved": false,
        "kind": 5,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "}",
      },
      "elements": Array [
        Object {
          "name": BrsString {
            "kind": 2,
            "value": "foo",
          },
          "value": Literal {
            "_location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
            "value": Int32 {
              "kind": 3,
              "value": 1,
            },
          },
        },
        Object {
          "name": BrsString {
            "kind": 2,
            "value": "bar",
          },
          "value": Literal {
            "_location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
            "value": Int32 {
              "kind": 3,
              "value": 2,
            },
          },
        },
        Object {
          "name": BrsString {
            "kind": 2,
            "value": "baz",
          },
          "value": Literal {
            "_location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
            "value": Int32 {
              "kind": 3,
              "value": 3,
            },
          },
        },
      ],
      "open": Object {
        "isReserved": false,
        "kind": 4,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "{",
      },
    },
  },
]
`;

exports[`parser associative array literals filled arrays on multiple lines without commas 1`] = `
Array [
  Assignment {
    "name": Object {
      "isReserved": false,
      "kind": 28,
      "literal": undefined,
      "location": Object {
        "end": Object {
          "column": -9,
          "line": -9,
        },
        "start": Object {
          "column": -9,
          "line": -9,
        },
      },
      "text": "_",
    },
    "tokens": Object {
      "equals": Object {
        "isReserved": false,
        "kind": 26,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "=",
      },
    },
    "value": AALiteral {
      "close": Object {
        "isReserved": false,
        "kind": 5,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "}",
      },
      "elements": Array [
        Object {
          "name": BrsString {
            "kind": 2,
            "value": "foo",
          },
          "value": Literal {
            "_location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
            "value": Int32 {
              "kind": 3,
              "value": 1,
            },
          },
        },
        Object {
          "name": BrsString {
            "kind": 2,
            "value": "bar",
          },
          "value": Literal {
            "_location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
            "value": Int32 {
              "kind": 3,
              "value": 2,
            },
          },
        },
        Object {
          "name": BrsString {
            "kind": 2,
            "value": "baz",
          },
          "value": Literal {
            "_location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
            "value": Int32 {
              "kind": 3,
              "value": 3,
            },
          },
        },
      ],
      "open": Object {
        "isReserved": false,
        "kind": 4,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "{",
      },
    },
  },
]
`;

exports[`parser associative array literals filled arrays on one line 1`] = `
Array [
  Assignment {
    "name": Object {
      "isReserved": false,
      "kind": 28,
      "literal": undefined,
      "location": Object {
        "end": Object {
          "column": -9,
          "line": -9,
        },
        "start": Object {
          "column": -9,
          "line": -9,
        },
      },
      "text": "_",
    },
    "tokens": Object {
      "equals": Object {
        "isReserved": false,
        "kind": 26,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "=",
      },
    },
    "value": AALiteral {
      "close": Object {
        "isReserved": false,
        "kind": 5,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "}",
      },
      "elements": Array [
        Object {
          "name": BrsString {
            "kind": 2,
            "value": "foo",
          },
          "value": Literal {
            "_location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
            "value": Int32 {
              "kind": 3,
              "value": 1,
            },
          },
        },
        Object {
          "name": BrsString {
            "kind": 2,
            "value": "bar",
          },
          "value": Literal {
            "_location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
            "value": Int32 {
              "kind": 3,
              "value": 2,
            },
          },
        },
        Object {
          "name": BrsString {
            "kind": 2,
            "value": "baz",
          },
          "value": Literal {
            "_location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
            "value": Int32 {
              "kind": 3,
              "value": 3,
            },
          },
        },
      ],
      "open": Object {
        "isReserved": false,
        "kind": 4,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "{",
      },
    },
  },
]
`;
